testsuite/tests/parser/should_fail/T13600b.stderr

T13600b.hs:4:1: error:
    Illegal bang-pattern (use BangPatterns):
    f4 ! (Just _)
